--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </nav>
 
     <div class="cartao">
-        <h2>Nome do prato</h2>
+        <h2>Python Burger</h2>
         <img src="burger.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, repudiandae, cum veritatis rem, molestias id repellat aut quibusdam nostrum modi illum maxime! Temporibus neque ad ea quis, dolor id. Ipsa.</p>
         <div class="valor">
@@ -23,7 +23,7 @@
     </div>
 
     <div class="cartao">
-        <h2>Nome do prato</h2>
+        <h2>Javascript Salada</h2>
         <img src="burger.jpg" alt="">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa beatae rem facilis voluptate? Corrupti recusandae nemo aliquid tempora reiciendis. Consequuntur molestias quidem quaerat dolorem voluptate corporis nulla reiciendis nam repellendus.
         </p>
@@ -33,7 +33,7 @@
     </div>
     
     <div class="cartao">
-        <h2>Nome do prato</h2>
+        <h2>Golang Burger</h2>
         <img src="burger.jpg" alt="">
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Debitis porro similique reiciendis voluptas, reprehenderit fuga quaerat quae laudantium possimus quis blanditiis ea aperiam ad delectus. Consequatur magnam laudantium fuga reprehenderit!</p>
         <div class="valor">
